feat: add sentences connections

--- a/classification/random_forest_restored_sentences.ipynb
+++ b/classification/random_forest_restored_sentences.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -58,11 +58,11 @@
    "source": [
     "# Returns (p_waves, qrs_waves, t_waves)\n",
     "def split_beats_in_p_qrt_t(beats_list):\n",
+    "  heart_beat_len = len(beats_list[0])\n",
+    "  retreat_value = heart_beat_len // 2\n",
     "  c_p_waves = []\n",
     "  c_qrs_waves = []\n",
     "  c_t_waves = []\n",
-    "  heart_beat_len = len(beats_list[0])\n",
-    "  retreat_value = heart_beat_len // 2\n",
     "  for j in range(len(beats_list)):\n",
     "    c_p_waves.append(beats_list[j][:retreat_value - 15])\n",
     "    c_qrs_waves.append(beats_list[j][retreat_value - 15:retreat_value + 15])\n",
@@ -202,7 +202,7 @@
    "execution_count": 5,
    "outputs": [],
    "source": [
-    "def teach_word2vec_or_get_from_path(words, file_path, num_features, use_cached = False):\n",
+    "def teach_word2vec_or_get_from_path(words, sentences_start_indices, file_path, num_features, use_cached = False):\n",
     "  \"\"\"Create and save model to file_path Word2Vec model.\n",
     "  \"\"\"\n",
     "  min_word_count = 1   # Minimum word count\n",
@@ -210,7 +210,16 @@
     "  context = 10          # Context window size\n",
     "  downsampling = 1e-3   # Downsample setting for frequent words\n",
     "  if not (os.path.exists(file_path) and use_cached):\n",
-    "    model = Word2Vec([words,], workers=num_workers,\n",
+    "    print(\"TeachWord2Vec: Concatenating sentences\")\n",
+    "    sentences = []\n",
+    "    for i in range(len(sentences_start_indices)-1):\n",
+    "      start_index = sentences_start_indices[i]\n",
+    "      end_index = sentences_start_indices[i + 1]\n",
+    "      sentences.append(words[start_index:end_index])\n",
+    "    sentences.append(words[sentences_start_indices[-1]:])\n",
+    "    \n",
+    "    print(\"TeachWord2Vec: Start Word2Vec training\")\n",
+    "    model = Word2Vec(sentences, workers=num_workers,\n",
     "                     vector_size=num_features, min_count = min_word_count,\n",
     "                     window = context, sample = downsampling)\n",
     "    model.save(file_path)\n",
@@ -392,16 +401,21 @@
     "  \"\"\"\n",
     "  all_beats = []\n",
     "  all_labels = []\n",
+    "  start_index = 0\n",
+    "  start_indices = []\n",
     "  for i, row in dataframe.iterrows():\n",
-    "    all_beats.append(row[\"beats\"])\n",
+    "    start_indices.append(start_index)\n",
+    "    beats = row[\"beats\"]\n",
+    "    all_beats.append(beats)\n",
     "    all_labels.append(row[\"labels\"])\n",
+    "    start_index = start_index + len(beats)\n",
     "  \n",
     "  beats = np.concatenate(all_beats).tolist()\n",
     "  labels = np.concatenate(all_labels).tolist()\n",
     "  return pd.DataFrame({\n",
     "    \"beats\": beats,\n",
     "    \"labels\": labels\n",
-    "  })\n",
+    "  }), pd.DataFrame({ \"start_indices\": start_indices })\n",
     "\n",
     "def get_sets_names(dir_path):\n",
     "  from os import listdir\n",
@@ -436,22 +450,29 @@
     "    train, validation = train_test_split(data_frame, test_size=0.25, stratify=data_frame[\"bin\"], random_state=42)\n",
     "    \n",
     "    print(\"Applying explode to train data\")\n",
-    "    train_df = concatenate_rows(train)\n",
+    "    train_df, train_start_indices = concatenate_rows(train)\n",
     "    print(\"Saving train data\")\n",
     "    train_df.to_pickle(train_path)\n",
+    "    train_start_indices.to_pickle(train_path + \".start_indices.pkl\")\n",
+    "    \n",
+    "    \n",
     "    \n",
     "    print(\"Applying explode to validation data\")\n",
-    "    validation_df = concatenate_rows(validation)\n",
+    "    validation_df, validation_start_indices = concatenate_rows(validation)\n",
     "    print(\"Saving validation data\")\n",
     "    validation_df.to_pickle(validation_path)\n",
+    "    validation_start_indices.to_pickle(validation_path + \".start_indices.pkl\")\n",
+    "    \n",
     "    \n",
     "    print(\"DF to lists conversion\")\n",
-    "    return (train_df[\"beats\"].tolist(), train_df[\"labels\"].tolist()), (validation_df[\"beats\"].tolist(), validation_df[\"labels\"].tolist())\n",
+    "    return (train_df[\"beats\"].tolist(), train_df[\"labels\"].tolist(), train_start_indices[\"start_indices\"].tolist()), (validation_df[\"beats\"].tolist(), validation_df[\"labels\"].tolist(), validation_start_indices[\"start_indices\"].tolist())\n",
     "  else:\n",
     "    print(\"Using cached train&validation datasets\")\n",
     "    train_df = pd.read_pickle(train_path)\n",
+    "    train_start_indices = pd.read_pickle(train_path + \".start_indices.pkl\")\n",
     "    validation_df = pd.read_pickle(validation_path)\n",
-    "    return (train_df[\"beats\"].tolist(), train_df[\"labels\"].tolist()), (validation_df[\"beats\"].tolist(), validation_df[\"labels\"].tolist())"
+    "    validation_start_indices = pd.read_pickle(validation_path + \".start_indices.pkl\")\n",
+    "    return (train_df[\"beats\"].tolist(), train_df[\"labels\"].tolist(), train_start_indices[\"start_indices\"].tolist()), (validation_df[\"beats\"].tolist(), validation_df[\"labels\"].tolist(), validation_start_indices[\"start_indices\"].tolist())"
    ],
    "metadata": {
     "collapsed": false,
@@ -463,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "outputs": [],
    "source": [
     "class TestParameters:\n",
@@ -519,7 +540,7 @@
     "  :param test_parameters: TestParameters\n",
     "  :return: \n",
     "  \"\"\"\n",
-    "  (train_beats, train_labels), (validation_beats, validation_labels) = prepare_train_and_test_sets(\n",
+    "  (train_beats, train_labels, train_start_indices), (validation_beats, validation_labels, validation_start_indices) = prepare_train_and_test_sets(\n",
     "    reload=not test_parameters.use_cache_train_and_validation_sets,\n",
     "    train_path=test_parameters.train_path,\n",
     "    validation_path=test_parameters.validation_path,\n",
@@ -528,9 +549,11 @@
     "  if test_parameters.train_size_limit is not None:\n",
     "    train_beats = train_beats[:test_parameters.train_size_limit]\n",
     "    train_labels = train_labels[:test_parameters.train_size_limit]\n",
+    "    train_start_indices = train_start_indices[:test_parameters.train_size_limit]\n",
     "  if test_parameters.validation_size_limit is not None:\n",
     "    validation_beats = validation_beats[:test_parameters.validation_size_limit]\n",
     "    validation_labels = validation_labels[:test_parameters.validation_size_limit]\n",
+    "    validation_start_indices = validation_start_indices[:test_parameters.validation_size_limit]\n",
     "  \n",
     "  # Create KMeans model based on train data\n",
     "  print(\"Training BeatsToWordsConverter\")\n",
@@ -544,7 +567,7 @@
     "  # Create Word2Vec model based on train data\n",
     "  print(\"Training Word2Vec\")\n",
     "  num_features = 300\n",
-    "  word2Vec_model = teach_word2vec_or_get_from_path(train_words, test_parameters.word2vec_cache_path, num_features, not test_parameters.reset_word2vec_cache)\n",
+    "  word2Vec_model = teach_word2vec_or_get_from_path(train_words, train_start_indices, test_parameters.word2vec_cache_path, num_features, not test_parameters.reset_word2vec_cache)\n",
     "\n",
     "  print(\"Vectorizing train data\")\n",
     "  # Vectorize train data using Word2Vec\n",
@@ -605,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
@@ -614,12 +637,12 @@
       "Training BeatsToWordsConverter\n",
       "Fitting QRS KMeans\n",
       "Fitting PT KMeans\n",
-      "Saving BeatsToWordsConverter to cache:  beats2words_5\n",
+      "Saving BeatsToWordsConverter to cache:  v2_beats2words_short5\n",
       "Predicting validation words using trained BeatsToWordsConverter\n",
-      "Training Word2Vec\n",
+      "Training Word2Vec\nTeachWord2Vec: Concatenating sentences\nTeachWord2Vec: Start Word2Vec training\n",
       "Vectorizing train data\nVectorizing test data\n",
       "Training random forest\n",
-      "Predicting using random forest\nCreating classification report\nReport id: 5131580c-3045-11ec-b16e-ec8eb50e3be9\n              precision    recall  f1-score   support\n\n           0       0.94      0.96      0.95      2042\n           1       0.96      0.93      0.94      1779\n\n    accuracy                           0.95      3821\n   macro avg       0.95      0.94      0.95      3821\nweighted avg       0.95      0.95      0.95      3821\n\n"
+      "Predicting using random forest\nCreating classification report\nReport id: 51309428-3045-11ec-b606-ec8eb50e3be9\n              precision    recall  f1-score   support\n\n           0       0.77      0.97      0.86      2043\n           1       0.91      0.53      0.67      1231\n\n    accuracy                           0.80      3274\n   macro avg       0.84      0.75      0.76      3274\nweighted avg       0.83      0.80      0.79      3274\n\n"
      ],
      "output_type": "stream"
     }
@@ -628,17 +651,70 @@
     "execute_random_forest_test(TestParameters(\n",
     "  train_size_limit=None,\n",
     "  validation_size_limit=None,\n",
-    "  base_data_sets_count_limit=None,\n",
+    "  base_data_sets_count_limit=5,\n",
     "  \n",
     "  use_cache_train_and_validation_sets=True,\n",
-    "  train_path=\"short5_train_db_cache.pkl\",\n",
-    "  validation_path=\"short5_validation_db_cache.pkl\",\n",
+    "  train_path=\"v2_short5_train_db_cache.pkl\",\n",
+    "  validation_path=\"v2_short5_validation_db_cache.pkl\",\n",
     "  \n",
     "  reset_beats2words_cache=True,\n",
-    "  beats2words_cache_path=\"beats2words_5\",\n",
+    "  beats2words_cache_path=\"v2_beats2words_short5\",\n",
     "  reset_word2vec_cache=True,\n",
-    "  word2vec_cache_path=\"word2vec_5.pkl\"\n",
-    "), \"Test with full datasets Gradient boosting\")\n"
+    "  word2vec_cache_path=\"v2_word2vec_short5.pkl\"\n",
+    "), \"[word2vec_v2] Test with 5 datasets Gradient boosting\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n",
+     "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "name": "stdout",
+     "text": [
+      "Loading dataset\nUsing cached dataset\n",
+      "Splitting dataset\nApplying explode to train data\n",
+      "Saving train data\n",
+      "Applying explode to validation data\n",
+      "Saving validation data\n",
+      "DF to lists conversion\n",
+      "Training BeatsToWordsConverter\n",
+      "Fitting QRS KMeans\n",
+      "Fitting PT KMeans\n",
+      "Saving BeatsToWordsConverter to cache:  v2_beats2words_full\n",
+      "Predicting validation words using trained BeatsToWordsConverter\n",
+      "Training Word2Vec\nTeachWord2Vec: Concatenating sentences\nTeachWord2Vec: Start Word2Vec training\n",
+      "Vectorizing train data\n",
+      "Vectorizing test data\n",
+      "Training random forest\n",
+      "Predicting using random forest\n",
+      "Creating classification report\n",
+      "Report id: 6b08b158-3042-11ec-958f-ec8eb50e3be9\n              precision    recall  f1-score   support\n\n           0       0.72      0.72      0.72     17779\n           1       0.41      0.41      0.41      8382\n\n    accuracy                           0.62     26161\n   macro avg       0.57      0.57      0.57     26161\nweighted avg       0.62      0.62      0.62     26161\n\n"
+     ],
+     "output_type": "stream"
+    }
+   ],
+   "source": [
+    "# execute_random_forest_test(TestParameters(\n",
+    "#   train_size_limit=None,\n",
+    "#   validation_size_limit=None,\n",
+    "#   base_data_sets_count_limit=None,\n",
+    "#   \n",
+    "#   use_cache_train_and_validation_sets=False,\n",
+    "#   train_path=\"v2_full_train_db_cache.pkl\",\n",
+    "#   validation_path=\"v2_full_validation_db_cache.pkl\",\n",
+    "#   \n",
+    "#   reset_beats2words_cache=True,\n",
+    "#   beats2words_cache_path=\"v2_beats2words_full\",\n",
+    "#   reset_word2vec_cache=True,\n",
+    "#   word2vec_cache_path=\"v2_word2vec_full.pkl\"\n",
+    "# ), \"[word2vec_v2] Test with full datasets Gradient boosting\")"
    ],
    "metadata": {
     "collapsed": false,
