feat: add other dataset tests

--- a/classification/random_forest_multiclassification.ipynb
+++ b/classification/random_forest_multiclassification.ipynb
@@ -38,6 +38,7 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
     "from ecgdetectors import Detectors\n",
     "from gensim.models import Word2Vec\n",
     "from datetime import datetime"
@@ -230,6 +231,7 @@
     "      valid_words_count = valid_words_count + 1\n",
     "      indices.append(i)\n",
     "\n",
+    "  print(\"Valid words count: \", valid_words_count, \"/\", len(words))\n",
     "  return indices, review_feature_vecs[:valid_words_count]\n"
    ],
    "metadata": {
@@ -269,11 +271,26 @@
     "  \"r\", \"F\", \"e\", \"j\", \"n\", \"E\", \"/\", \"f\", \"Q\", \"?\"\n",
     "]\n",
     "\n",
+    "abnormal_popular_beats = [\n",
+    "  \"L\", \"R\", \"V\",\n",
+    "  #\"L\", \"V\",\n",
+    "]\n",
+    "\n",
+    "# 0         77896\n",
+    "# 1          8052\n",
+    "# 2          7235\n",
+    "# 4          2536\n",
+    "# 8          7113\n",
+    "# 10          801\n",
+    "# 15         6999\n",
+    "# 16          982\n",
+    "\n",
     "def classify_beat(symbol):\n",
     "  try:\n",
-    "    return abnormal_beats.index(symbol) + 1\n",
+    "    return abnormal_popular_beats.index(symbol) + 1\n",
     "  except ValueError:\n",
-    "    return 0\n",
+    "    if symbol == \"N\" or symbol == \".\":\n",
+    "      return 0\n",
     "  # if symbol in abnormal_beats:\n",
     "  #   return 1\n",
     "  # elif symbol == \"N\" or symbol == \".\":\n",
@@ -346,6 +363,9 @@
     "    else:\n",
     "      return 1\n",
     "\n",
+    "  if len(labels) == 0:\n",
+    "    return None, None, None\n",
+    "\n",
     "  normal_percentage = sum(list(map(map_abnormal, labels))) / len(labels)\n",
     "\n",
     "  assert len(valid_beats) == len(labels)\n",
@@ -360,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "outputs": [],
    "source": [
     "def combine_sets_beats_and_features(sets_numbers):\n",
@@ -368,17 +388,23 @@
     "  for set_number in sets_numbers:\n",
     "    print(\"Loading set: \" + str(set_number))\n",
     "    beats, labels, normal_percentage = load(\"../mitdb\", set_number)\n",
-    "    sets_data.append({\n",
-    "      \"beats\": beats,\n",
-    "      \"labels\": labels,\n",
-    "      \"normal_percentage\": normal_percentage\n",
-    "    })\n",
+    "    if beats is not None:\n",
+    "      sets_data.append({\n",
+    "        \"beats\": beats,\n",
+    "        \"labels\": labels,\n",
+    "        \"normal_percentage\": normal_percentage\n",
+    "      })\n",
+    "    else:\n",
+    "      print(\"Skipping cutted dataset \", str(set_number))\n",
     "  return sets_data\n",
     "\n",
     "def vectorize_using_prepared_word2vec(words, labels, word2vec_model, num_features):\n",
     "  valid_beats_indices, features = create_beats_features(words, num_features, word2vec_model)\n",
     "\n",
     "  valid_beats_labels = [labels[i] for i in valid_beats_indices]\n",
+    "  print(\"Labels count:\")\n",
+    "  print(np.bincount(np.array(valid_beats_labels)))\n",
+    "\n",
     "  return features, valid_beats_labels\n",
     "\n",
     "def concatenate_rows(dataframe):\n",
@@ -432,7 +458,6 @@
     "    if sets_count_limit is not None:\n",
     "      data_frame = data_frame[:sets_count_limit]\n",
     "\n",
-    "\n",
     "    print(\"Splitting dataset\")\n",
     "    bins = [0, 0.2, 0.6, 1.0]\n",
     "    data_frame[\"bin\"] = pd.cut(data_frame['normal_percentage'], bins=bins, labels=False, include_lowest=True)\n",
@@ -449,24 +474,12 @@
     "    print(\"Saving validation data\")\n",
     "    validation_df.to_pickle(validation_path)\n",
     "\n",
-    "    print(\"Train data group by label:\")\n",
-    "    print(train_df.value_counts(['labels']))\n",
-    "\n",
-    "    print(\"Validation data group by label:\")\n",
-    "    print(validation_df.value_counts(['labels']))\n",
-    "\n",
     "    print(\"DF to lists conversion\")\n",
     "    return (train_df[\"beats\"].tolist(), train_df[\"labels\"].tolist()), (validation_df[\"beats\"].tolist(), validation_df[\"labels\"].tolist())\n",
     "  else:\n",
     "    print(\"Using cached train&validation datasets\")\n",
     "    train_df = pd.read_pickle(train_path)\n",
     "    validation_df = pd.read_pickle(validation_path)\n",
-    "\n",
-    "    print(\"Train data group by label:\")\n",
-    "    print(train_df.value_counts(['labels']))\n",
-    "\n",
-    "    print(\"Validation data group by label:\")\n",
-    "    print(validation_df.value_counts(['labels']))\n",
     "\n",
     "    return (train_df[\"beats\"].tolist(), train_df[\"labels\"].tolist()), (validation_df[\"beats\"].tolist(), validation_df[\"labels\"].tolist())"
    ],
@@ -479,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "class TestParameters:\n",
@@ -556,7 +569,7 @@
     "    validation_labels = validation_labels[:test_parameters.validation_size_limit]\n",
     "\n",
     "  # Create KMeans model based on train data\n",
-    "  print(\"Training BeatsToWordsConverter\")\n",
+    "  print(\"Training BeatsToWordsConverter. Train beats len = \", len(train_beats), \"; Validation beats len = \", len(validation_beats))\n",
     "  beats2words_converter = BeatsToWordsConverter()\n",
     "  train_words = beats2words_converter.fit_and_predict_words(train_beats, test_parameters.beats2words_cache_path, test_parameters.reset_beats2words_cache)\n",
     "  \n",
@@ -590,7 +603,7 @@
     "  (train_x, train_y), (validation_x, validation_y) = prepare_data_for_random_forest(test_parameters)\n",
     "\n",
     "  print(\"Training random forest\")\n",
-    "  forest = RandomForestClassifier(n_estimators = 100, verbose=True, n_jobs=4)\n",
+    "  forest = GradientBoostingClassifier(n_estimators = 100)\n",
     "  forest = forest.fit(train_x, train_y)\n",
     "\n",
     "  print(\"Predicting using random forest\")\n",
@@ -627,79 +640,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Using cached train&validation datasets\n",
-      "Train data group by label:\n",
-      "labels\n",
-      "0         22232\n",
-      "15         5463\n",
-      "2          2160\n",
-      "16          722\n",
-      "8           293\n",
-      "4           150\n",
-      "17           25\n",
-      "10            6\n",
-      "5             6\n",
-      "6             2\n",
-      "12            1\n",
-      "dtype: int64\n",
-      "Validation data group by label:\n",
-      "labels\n",
-      "0         5765\n",
-      "1         4600\n",
-      "8         1000\n",
-      "10           2\n",
-      "4            2\n",
-      "dtype: int64\n",
-      "Training BeatsToWordsConverter\n",
-      "Fitting QRS KMeans\n",
-      "Fitting PT KMeans\n",
-      "Saving BeatsToWordsConverter to cache:  beats2words_multi20\n",
+      "Training BeatsToWordsConverter. Train beats len =  71556 ; Validation beats len =  25639\n",
+      "Using cached BeatsToWordsConverter from file:  beats2words_cl3_tmulti\n",
       "Predicting validation words using trained BeatsToWordsConverter\n",
       "Training Word2Vec\n",
+      "Using cached Word2Vec from file:  word2vec_cl3_tmulti.pkl\n",
       "Vectorizing train data\n",
+      "Valid words count:  71556 / 71556\n",
+      "Labels count:\n",
+      "[57485  8052  1728  4291]\n",
       "Vectorizing test data\n",
-      "Training random forest\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    3.7s\n",
-      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:    8.5s finished\n",
-      "[Parallel(n_jobs=4)]: Using backend ThreadingBackend with 4 concurrent workers.\n",
-      "[Parallel(n_jobs=4)]: Done  42 tasks      | elapsed:    0.0s\n",
-      "[Parallel(n_jobs=4)]: Done 100 out of 100 | elapsed:    0.0s finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Valid words count:  25181 / 25639\n",
+      "Labels count:\n",
+      "[17007     0  5460  2714]\n",
+      "Training random forest\n",
       "Predicting using random forest\n",
       "Creating classification report\n",
-      "Report id: 24f2c6a4-2b8c-11ec-af79-ec8eb50e3be9\n",
+      "Report id: 1d5c4bae-319f-11ec-a8c0-1e00ea022979\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.56      0.92      0.70      5448\n",
-      "           1       0.00      0.00      0.00      4146\n",
-      "           2       0.00      0.00      0.00         0\n",
-      "           4       0.00      0.00      0.00         2\n",
-      "           8       0.66      0.05      0.10       889\n",
-      "          10       0.00      0.00      0.00         2\n",
-      "          15       0.00      0.00      0.00         0\n",
-      "          16       0.00      0.00      0.00         0\n",
+      "           0       0.69      0.99      0.81     17007\n",
+      "           1       0.00      0.00      0.00         0\n",
+      "           2       0.14      0.00      0.00      5460\n",
+      "           3       0.76      0.21      0.33      2714\n",
       "\n",
-      "    accuracy                           0.48     10487\n",
-      "   macro avg       0.15      0.12      0.10     10487\n",
-      "weighted avg       0.35      0.48      0.37     10487\n",
+      "    accuracy                           0.69     25181\n",
+      "   macro avg       0.40      0.30      0.29     25181\n",
+      "weighted avg       0.58      0.69      0.59     25181\n",
       "\n"
      ]
     },
@@ -707,17 +681,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\mikle\\AppData\\Roaming\\Python\\Python36\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "/Users/mihail/.pyenv/versions/3.9.7/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1308: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\mikle\\AppData\\Roaming\\Python\\Python36\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "/Users/mihail/.pyenv/versions/3.9.7/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1308: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\mikle\\AppData\\Roaming\\Python\\Python36\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\mikle\\AppData\\Roaming\\Python\\Python36\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\mikle\\AppData\\Roaming\\Python\\Python36\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
-      "  _warn_prf(average, modifier, msg_start, len(result))\n",
-      "C:\\Users\\mikle\\AppData\\Roaming\\Python\\Python36\\site-packages\\sklearn\\metrics\\_classification.py:1248: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
+      "/Users/mihail/.pyenv/versions/3.9.7/lib/python3.9/site-packages/sklearn/metrics/_classification.py:1308: UndefinedMetricWarning: Recall and F-score are ill-defined and being set to 0.0 in labels with no true samples. Use `zero_division` parameter to control this behavior.\n",
       "  _warn_prf(average, modifier, msg_start, len(result))\n"
      ]
     }
@@ -725,22 +693,35 @@
    "source": [
     "execute_random_forest_test(TestParameters(\n",
     "  reset_base_dataset=False,\n",
-    "  base_dataset_path=\"dataset_multi.pkl\",\n",
+    "  base_dataset_path=\"dataset_multi_full_3classes.pkl\",\n",
     "\n",
     "  train_size_limit=None,\n",
     "  validation_size_limit=None,\n",
-    "  base_data_sets_count_limit=20,\n",
+    "\n",
+    "  base_data_sets_count_limit=None,\n",
     "  \n",
     "  use_cache_train_and_validation_sets=True,\n",
-    "  train_path=\"multi20_train_db_cache.pkl\",\n",
-    "  validation_path=\"multi20_validation_db_cache.pkl\",\n",
+    "  train_path=\"cl3_tmulti_train_db_cache.pkl\",\n",
+    "  validation_path=\"cl3_tmulti3_validation_db_cache.pkl\",\n",
     "  \n",
-    "  reset_beats2words_cache=True,\n",
-    "  beats2words_cache_path=\"beats2words_multi20\",\n",
-    "  reset_word2vec_cache=True,\n",
-    "  word2vec_cache_path=\"word2vec_multi20.pkl\"\n",
-    "), \"Test with 20 datasets\")\n"
+    "  reset_beats2words_cache=False,\n",
+    "  beats2words_cache_path=\"beats2words_cl3_tmulti\",\n",
+    "  reset_word2vec_cache=False,\n",
+    "  word2vec_cache_path=\"word2vec_cl3_tmulti.pkl\"\n",
+    "), \"[GradientBoosting] Test with full datasets\")"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
