feat: add timing

--- a/classification/random_forest_restored_sentences.ipynb
+++ b/classification/random_forest_restored_sentences.ipynb
@@ -16,14 +16,13 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -46,8 +45,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -177,8 +175,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -192,8 +189,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%md\n",
-     "is_executing": false
+     "name": "#%%md\n"
     }
    }
   },
@@ -248,8 +244,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -263,8 +258,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%md\n",
-     "is_executing": false
+     "name": "#%%md\n"
     }
    }
   },
@@ -365,8 +359,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -477,8 +470,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
@@ -532,7 +524,29 @@
     "           +\"\\nreset_word2vec_cache=\" + str(self.reset_word2vec_cache)\\\n",
     "           +\"\\nword2vec_cache_path=\" + str(self.word2vec_cache_path)\\\n",
     "           + \"\\n}\"\n",
-    "  \n",
+    "\n",
+    "def prepare_data(test_parameters):\n",
+    "  \"\"\"\n",
+    "\n",
+    "  :param test_parameters: TestParameters\n",
+    "  :return:\n",
+    "  \"\"\"\n",
+    "  (train_beats, train_labels, train_start_indices), (validation_beats, validation_labels, validation_start_indices) = prepare_train_and_test_sets(\n",
+    "    reload=not test_parameters.use_cache_train_and_validation_sets,\n",
+    "    train_path=test_parameters.train_path,\n",
+    "    validation_path=test_parameters.validation_path,\n",
+    "    sets_count_limit=test_parameters.base_data_sets_count_limit\n",
+    "  )\n",
+    "  if test_parameters.train_size_limit is not None:\n",
+    "    train_beats = train_beats[:test_parameters.train_size_limit]\n",
+    "    train_labels = train_labels[:test_parameters.train_size_limit]\n",
+    "    train_start_indices = train_start_indices[:test_parameters.train_size_limit]\n",
+    "  if test_parameters.validation_size_limit is not None:\n",
+    "    validation_beats = validation_beats[:test_parameters.validation_size_limit]\n",
+    "    validation_labels = validation_labels[:test_parameters.validation_size_limit]\n",
+    "    validation_start_indices = validation_start_indices[:test_parameters.validation_size_limit]\n",
+    "\n",
+    "  return (train_beats, train_labels), (validation_beats, validation_labels)\n",
     "\n",
     "def prepare_data_for_random_forest(test_parameters):\n",
     "  \"\"\"\n",
@@ -578,20 +592,30 @@
     "  test_data = vectorize_using_prepared_word2vec(validation_words, validation_labels, word2Vec_model, num_features)\n",
     "  return train_data, test_data\n",
     "\n",
-    "def execute_random_forest_test(test_parameters, comment):\n",
+    "def execute_random_forest_test(test_parameters, comment, use_word2vec):\n",
     "  \"\"\"\n",
     "  \n",
     "  :param test_parameters: TestParameters\n",
     "  :param comment: \n",
-    "  :return: \n",
+    "  :param use_word2vec: bool\n",
+    "  :return:\n",
     "  \"\"\"\n",
     "  test_start_time = datetime.now()\n",
-    "  \n",
-    "  (train_x, train_y), (validation_x, validation_y) = prepare_data_for_random_forest(test_parameters)\n",
+    "\n",
+    "  data_preparing_start_time = datetime.now()\n",
+    "\n",
+    "  if use_word2vec:\n",
+    "    (train_x, train_y), (validation_x, validation_y) = prepare_data_for_random_forest(test_parameters)\n",
+    "  else:\n",
+    "    (train_x, train_y), (validation_x, validation_y) = prepare_data(test_parameters)\n",
+    "\n",
+    "  data_preparing_time_spend = datetime.now() - data_preparing_start_time\n",
     "\n",
     "  print(\"Training random forest\")\n",
+    "  training_start_time = datetime.now()\n",
     "  forest = GradientBoostingClassifier(n_estimators = 100)\n",
     "  forest = forest.fit(train_x, train_y)\n",
+    "  training_time_spend = datetime.now() - training_start_time\n",
     "\n",
     "  print(\"Predicting using random forest\")\n",
     "  result = forest.predict(validation_x)\n",
@@ -611,6 +635,10 @@
     "  f.write(\"Test parameters:\\n\" + str(test_parameters) + \"\\n\")\n",
     "  f.write(\"Actual train size: \" + str(len(train_x)) + \"\\n\")\n",
     "  f.write(\"Actual validation size: \" + str(len(validation_x)) + \"\\n\")\n",
+    "  f.write(\"Actual validation size: \" + str(len(validation_x)) + \"\\n\")\n",
+    "  f.write(\"use_word2vec: \" + str(use_word2vec) + \"\\n\")\n",
+    "  f.write(\"Data preparing time millis: \" + str(data_preparing_time_spend.total_seconds() * 1000) + \"\\n\")\n",
+    "  f.write(\"Training working time millis: \" + str(training_time_spend.total_seconds() * 1000) + \"\\n\")\n",
     "  f.write(\"Comment: \" + comment + \"\\n\")\n",
     "  f.write(report)\n",
     "  f.write(\"\\n===========================================\")\n",
@@ -621,85 +649,62 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "Using cached train&validation datasets\n",
-      "Training BeatsToWordsConverter\n",
-      "Fitting QRS KMeans\n",
-      "Fitting PT KMeans\n",
-      "Saving BeatsToWordsConverter to cache:  v2_beats2words_short5\n",
-      "Predicting validation words using trained BeatsToWordsConverter\n",
-      "Training Word2Vec\nTeachWord2Vec: Concatenating sentences\nTeachWord2Vec: Start Word2Vec training\n",
-      "Vectorizing train data\nVectorizing test data\n",
       "Training random forest\n",
-      "Predicting using random forest\nCreating classification report\nReport id: 51309428-3045-11ec-b606-ec8eb50e3be9\n              precision    recall  f1-score   support\n\n           0       0.77      0.97      0.86      2043\n           1       0.91      0.53      0.67      1231\n\n    accuracy                           0.80      3274\n   macro avg       0.84      0.75      0.76      3274\nweighted avg       0.83      0.80      0.79      3274\n\n"
-     ],
-     "output_type": "stream"
+      "Predicting using random forest\n",
+      "Creating classification report\n",
+      "Report id: dc9f614c-3361-11ec-86c4-ec8eb50e3be9\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.66      0.99      0.79      2175\n",
+      "           1       0.98      0.47      0.64      2082\n",
+      "\n",
+      "    accuracy                           0.74      4257\n",
+      "   macro avg       0.82      0.73      0.72      4257\n",
+      "weighted avg       0.82      0.74      0.72      4257\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "execute_random_forest_test(TestParameters(\n",
     "  train_size_limit=None,\n",
     "  validation_size_limit=None,\n",
-    "  base_data_sets_count_limit=5,\n",
+    "  base_data_sets_count_limit=6,\n",
     "  \n",
     "  use_cache_train_and_validation_sets=True,\n",
-    "  train_path=\"v2_short5_train_db_cache.pkl\",\n",
-    "  validation_path=\"v2_short5_validation_db_cache.pkl\",\n",
+    "  train_path=\"v2_short6_train_db_cache.pkl\",\n",
+    "  validation_path=\"v2_short6_validation_db_cache.pkl\",\n",
     "  \n",
-    "  reset_beats2words_cache=True,\n",
-    "  beats2words_cache_path=\"v2_beats2words_short5\",\n",
-    "  reset_word2vec_cache=True,\n",
-    "  word2vec_cache_path=\"v2_word2vec_short5.pkl\"\n",
-    "), \"[word2vec_v2] Test with 5 datasets Gradient boosting\")"
+    "  reset_beats2words_cache=False,\n",
+    "  beats2words_cache_path=\"v2_beats2words_short6\",\n",
+    "  reset_word2vec_cache=False,\n",
+    "  word2vec_cache_path=\"v2_word2vec_short6.pkl\"\n",
+    "), \"[word2vec_v2] Test with 6 datasets GradientBoosting\", False)"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [
-    {
-     "name": "stdout",
-     "text": [
-      "Loading dataset\nUsing cached dataset\n",
-      "Splitting dataset\nApplying explode to train data\n",
-      "Saving train data\n",
-      "Applying explode to validation data\n",
-      "Saving validation data\n",
-      "DF to lists conversion\n",
-      "Training BeatsToWordsConverter\n",
-      "Fitting QRS KMeans\n",
-      "Fitting PT KMeans\n",
-      "Saving BeatsToWordsConverter to cache:  v2_beats2words_full\n",
-      "Predicting validation words using trained BeatsToWordsConverter\n",
-      "Training Word2Vec\nTeachWord2Vec: Concatenating sentences\nTeachWord2Vec: Start Word2Vec training\n",
-      "Vectorizing train data\n",
-      "Vectorizing test data\n",
-      "Training random forest\n",
-      "Predicting using random forest\n",
-      "Creating classification report\n",
-      "Report id: 6b08b158-3042-11ec-958f-ec8eb50e3be9\n              precision    recall  f1-score   support\n\n           0       0.72      0.72      0.72     17779\n           1       0.41      0.41      0.41      8382\n\n    accuracy                           0.62     26161\n   macro avg       0.57      0.57      0.57     26161\nweighted avg       0.62      0.62      0.62     26161\n\n"
-     ],
-     "output_type": "stream"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# execute_random_forest_test(TestParameters(\n",
     "#   train_size_limit=None,\n",
@@ -719,8 +724,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": false
+     "name": "#%%\n"
     }
    }
   }
@@ -742,15 +746,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
